# inverse-acronym

./: .gitignore  README.md  parser.py  pyproject.toml  scrape-list.py
inverse_acronym/: data.py  main.py  menus.py  scraper.py
tests/: test_data.py
