[tool.poetry]
name = "inverse-acronym"
version = "0.1.0"
description = ""
authors = ["CarlosBueloni <carlosbueloni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
requests = "^2.32.3"
requests-html = "^0.10.0"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
