[tool.poetry]
name = "inverse-acronym"
version = "0.1.0"
description = ""
authors = ["CarlosBueloni <carlosbueloni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
Unidecode = "^1.3.8"
pytest = "^8.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
